# hobo-starter

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/client/: Cargo.toml
crates/client/.cargo/: config.toml
crates/client/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
misc/: response.html
